Adapt library metadata

--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
-name=Sensirion UART Sen44
-version=TODO: DRIVER_GENERATOR Set correct version
+name=Sensirion UART SEN44
+version=0.1.0
 author=Sensirion
 maintainer=Sensirion
-sentence=Library for the SEN44 sensor family by Sensirion
-paragraph=Enables you to use the XXX via UART using the SHDLC protocol. TODO: DRIVER_GENERATOR Add specific sensor
+sentence=Library for the SEN44 sensor by Sensirion
+paragraph=Enables you to use the SEN44 via UART using the SHDLC protocol.
 url=https://github.com/Sensirion/arduino-uart-sen44
 category=Sensors
 depends=Sensirion Core
